--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </ul>
   
   
-<div style="margin-top: 2em; margin-bottom: 0; z-index: 1;" class="grid container" id="home">
- <p class="fs-800" style="transform: translateX(-100%); animation: slideInLeft .2s linear forwards;">Indian sweets <span style="animation: emphasize .5s linear forwards 0.3s;">reimagined...</span></p> 
+<div style="margin-top: 2em; margin-bottom: 0; z-index: 1; line-height: 1.2;" class="grid" id="home">
+ <p class="fs-800"  style="padding-inline:.5em;transform: translateX(-100%); animation: slideInLeft .2s linear forwards; ">Indian sweets <span style="animation: emphasize .5s linear forwards 0.3s;">reimagined...</span></p> 
  <img src="https://images.unsplash.com/photo-1622715395476-3dbcd161df05?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aW5kaWFuJTIwc3dlZXRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="sweets" class="main img">
 </div>
 <div class="line"></div>
